force-app/main/default/objects/Propensity__c/Propensity__c.object-meta.xml
<CustomObject>
    <label>Propensity</label>
    <nameField>
        <displayFormat>PR-{000000}</displayFormat>
        <label>Propensity Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Propensity</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>