force-app/main/default/objects/Propensity__c/fields/Company_Size__c.field-meta.xml
<CustomField>
    <fullName>Company_Size__c</fullName>
    <formula>IMAGE(
CASE(  FTE_Size_Impact__c ,
&quot;Very High&quot;, &quot;/servlet/servlet.FileDownload?file=0150C000000G6pM&quot;,
&quot;High&quot;, &quot;/servlet/servlet.FileDownload?file=0154I000004adFK&quot;,
&quot;Medium&quot;, &quot;/servlet/servlet.FileDownload?file=0154I000004adFM&quot;,
&quot;Low&quot;, &quot;/servlet/servlet.FileDownload?file=0154I000004adFL&quot;,
&quot;/s.gif&quot;) ,
&quot;status color&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Company Size</label>
    <type>Text</type>
</CustomField>