force-app/main/default/objects/Propensity__c/fields/Conversion_Score__c.field-meta.xml
<CustomField>
    <fullName>Conversion_Score__c</fullName>
    <description>Rounded percentage of conversion score that is fed into this object</description>
    <formula>Conversion_Score_Percentage__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Conversion_Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>