force-app/main/default/objects/Propensity__c/fields/Conversion_Score_Context__c.field-meta.xml
<CustomField>
    <fullName>Conversion_Score_Context__c</fullName>
    <label>Conversion Score Context</label>
    <type>TextArea</type>
</CustomField>