force-app/main/default/objects/Propensity__c/fields/Conversion_Score_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Conversion_Score_Percentage__c</fullName>
    <label>Conversion Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>