force-app/main/default/objects/Propensity__c/fields/Conversion_Vs_Average_For_Product__c.field-meta.xml
<CustomField>
    <fullName>Conversion_Vs_Average_For_Product__c</fullName>
    <formula>IMAGE(
CASE(  Conversion_Vs_Average_For_Product_Text__c ,
&quot;Very High&quot;, &quot;/servlet/servlet.FileDownload?file=0154I000004adFN&quot;,
&quot;High&quot;, &quot;/servlet/servlet.FileDownload?file=0154I000004adFK&quot;,
&quot;Medium&quot;, &quot;/servlet/servlet.FileDownload?file=0154I000004adFM&quot;,
&quot;Low&quot;, &quot;/servlet/servlet.FileDownload?file=0154I000004adFL&quot;,
&quot;/s.gif&quot;) ,
&quot;status color&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Conversion Vs Average For Product</label>
    <type>Text</type>
</CustomField>