force-app/main/default/objects/Propensity__c/fields/Conversion_Vs_Average_For_Product_Text__c.field-meta.xml
<CustomField>
    <fullName>Conversion_Vs_Average_For_Product_Text__c</fullName>
    <label>Conversion Vs Average For Product Text</label>
    <type>TextArea</type>
</CustomField>