force-app/main/default/objects/Propensity__c/fields/Creation_Score__c.field-meta.xml
<CustomField>
    <fullName>Creation_Score__c</fullName>
    <description>Rounded Percentage of the percentage the is fed into this object</description>
    <formula>Creation_Score_Percentage__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Creation_Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>