force-app/main/default/objects/Propensity__c/fields/Creation_Score_Context__c.field-meta.xml
<CustomField>
    <fullName>Creation_Score_Context__c</fullName>
    <label>Creation Score Context</label>
    <type>TextArea</type>
</CustomField>