force-app/main/default/objects/Propensity__c/fields/Creation_Score_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Creation_Score_Percentage__c</fullName>
    <label>Creation Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>