force-app/main/default/objects/Propensity__c/fields/Data_Source__c.field-meta.xml
<CustomField>
    <fullName>Data_Source__c</fullName>
    <description>What model has each record been derived from</description>
    <label>Data Source</label>
    <type>TextArea</type>
</CustomField>