force-app/main/default/objects/Propensity__c/fields/FTE_Size_Impact__c.field-meta.xml
<CustomField>
    <fullName>FTE_Size_Impact__c</fullName>
    <label>Company Size Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>