force-app/main/default/objects/Propensity__c/fields/Marketing_Engagement_Impact__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Engagement_Impact__c</fullName>
    <label>Marketing Engagement Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>