force-app/main/default/objects/Propensity__c/fields/Next_Step__c.field-meta.xml
<CustomField>
    <fullName>Next_Step__c</fullName>
    <label>Next Step</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>