force-app/main/default/objects/Propensity__c/fields/Next_Step_History__c.field-meta.xml
<CustomField>
    <fullName>Next_Step_History__c</fullName>
    <description>Purpose: This field will be updated via a process builder to hold the history data of the Next Step fied. This will happen each time the next step field is changed. This field should be read only and on page layouts</description>
    <inlineHelpText>Read only field that gets updated when there has been a change to the Next Step field</inlineHelpText>
    <label>Next Step History</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>