force-app/main/default/objects/Propensity__c/fields/Next_Step_Last_Updated__c.field-meta.xml
<CustomField>
    <fullName>Next_Step_Last_Updated__c</fullName>
    <description>Purpose: This field will be update via a process builder to record the date the last time the next step field was updated. This field should be read only and NOT on page layouts. Purpose is intended for reporting only</description>
    <label>Next Step Last Updated</label>
    <type>Date</type>
</CustomField>