force-app/main/default/objects/Propensity__c/fields/Potential_ABC__c.field-meta.xml
<CustomField>
    <fullName>Potential_ABC__c</fullName>
    <inlineHelpText>The potential ABC an opp for this product could be worth for this Customer</inlineHelpText>
    <label>Potential ABC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>