force-app/main/default/objects/Propensity__c/fields/Priority_Grouping__c.field-meta.xml
<CustomField>
    <fullName>Priority_Grouping__c</fullName>
    <description>Field to record the group a suite of accounts should fall into, with respect to the data that is stored for them</description>
    <label>Priority Grouping</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
            <value>
                <fullName>D</fullName>
            </value>
            <value>
                <fullName>E</fullName>
            </value>
            <value>
                <fullName>F</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>