force-app/main/default/objects/Propensity__c/fields/Product2__c.field-meta.xml
<CustomField>
    <fullName>Product2__c</fullName>
    <label>Product2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>