force-app/main/default/objects/Propensity__c/fields/Product_Engagement_2__c.field-meta.xml
<CustomField>
    <fullName>Product_Engagement_2__c</fullName>
    <formula>IMAGE(
CASE(  Product_Engagement__c ,
&quot;Very High&quot;, &quot;/servlet/servlet.FileDownload?file=0154I000004adFN&quot;,
&quot;High&quot;, &quot;/servlet/servlet.FileDownload?file=0154I000004adFK&quot;,
&quot;Medium&quot;, &quot;/servlet/servlet.FileDownload?file=0154I000004adFM&quot;,
&quot;Low&quot;, &quot;/servlet/servlet.FileDownload?file=0154I000004adFL&quot;,
&quot;/s.gif&quot;) ,
&quot;status color&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Engagement</label>
    <type>Text</type>
</CustomField>