force-app/main/default/objects/Propensity__c/fields/Product_Engagement__c.field-meta.xml
<CustomField>
    <fullName>Product_Engagement__c</fullName>
    <label>Product Engagement Text</label>
    <type>TextArea</type>
</CustomField>