force-app/main/default/objects/Propensity__c/fields/Product_Potential_ABC__c.field-meta.xml
<CustomField>
    <fullName>Product_Potential_ABC__c</fullName>
    <formula>Product_Name__c &amp; &quot; | &quot;  &amp; Text(Potential_ABC__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product | Potential ABC</label>
    <type>Text</type>
</CustomField>