force-app/main/default/objects/Propensity__c/fields/Propensity_Score__c.field-meta.xml
<CustomField>
    <fullName>Propensity_Score__c</fullName>
    <description>Rounded % of propensity score that is fed through</description>
    <formula>Propensity_Score_percentage__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Propensity_Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>