force-app/main/default/objects/Propensity__c/fields/Propensity_Score_Not_Used__c.field-meta.xml
<CustomField>
    <fullName>Propensity_Score_Not_Used__c</fullName>
    <label>Propensity Score Not Used</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>