force-app/main/default/objects/Propensity__c/fields/Propensity_Score_percentage__c.field-meta.xml
<CustomField>
    <fullName>Propensity_Score_percentage__c</fullName>
    <label>Propensity Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>