force-app/main/default/objects/Propensity__c/fields/Sales_Owner__c.field-meta.xml
<CustomField>
    <fullName>Sales_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Person in Sales who is using this record to investigate and drive a sale with a Customer</inlineHelpText>
    <label>Sales Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Propensity</relationshipName>
    <type>Lookup</type>
</CustomField>