force-app/main/default/objects/Propensity__c/fields/Sales_Track_Record_Impact__c.field-meta.xml
<CustomField>
    <fullName>Sales_Track_Record_Impact__c</fullName>
    <label>Sales Track Record Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>