force-app/main/default/objects/Propensity__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Actioned</fullName>
                <default>true</default>
                <label>Not Actioned</label>
            </value>
            <value>
                <fullName>Meeting to Discuss Booked</fullName>
            </value>
            <value>
                <fullName>Good Fit but No Opportunity</fullName>
            </value>
            <value>
                <fullName>Confirmed Not Good Fit</fullName>
            </value>
            <value>
                <fullName>Current Opportunity</fullName>
            </value>
            <value>
                <fullName>Already have Access Solution</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>