force-app/main/default/objects/Propensity__c/fields/Support_Impact_Engagement__c.field-meta.xml
<CustomField>
    <fullName>Support_Impact_Engagement__c</fullName>
    <label>Support Engagement Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>