force-app/main/default/objects/Propensity__c/fields/What_They_Have__c.field-meta.xml
<CustomField>
    <fullName>What_They_Have__c</fullName>
    <formula>IMAGE(
CASE( What_They_Have_Impact__c,
&quot;Very High&quot;, &quot;/servlet/servlet.FileDownload?file=0154I000004adFN&quot;,
&quot;High&quot;, &quot;/servlet/servlet.FileDownload?file=0154I000004adFK&quot;,
&quot;Medium&quot;, &quot;/servlet/servlet.FileDownload?file=0154I000004adFM&quot;,
&quot;Low&quot;, &quot;/servlet/servlet.FileDownload?file=0154I000004adFL&quot;,
&quot;/s.gif&quot;) ,
&quot;status color&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>What They Have</label>
    <type>Text</type>
</CustomField>