force-app/main/default/objects/Propensity__c/fields/What_They_Have_Impact__c.field-meta.xml
<CustomField>
    <fullName>What_They_Have_Impact__c</fullName>
    <label>What They Have Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>