force-app/main/default/objects/Propensity__c/fields/Who_They_Are__c.field-meta.xml
<CustomField>
    <fullName>Who_They_Are__c</fullName>
    <formula>IMAGE(
CASE(  Who_They_Are_Impact__c ,
&quot;Very High&quot;, &quot;/servlet/servlet.FileDownload?file=0154I000004adFN&quot;,
&quot;High&quot;, &quot;/servlet/servlet.FileDownload?file=0154I000004adFK&quot;,
&quot;Medium&quot;, &quot;/servlet/servlet.FileDownload?file=0154I000004adFM&quot;,
&quot;Low&quot;, &quot;/servlet/servlet.FileDownload?file=0154I000004adFL&quot;,
&quot;/s.gif&quot;) ,
&quot;status color&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Who They Are</label>
    <type>Text</type>
</CustomField>