force-app/main/default/objects/Propensity__c/fields/Who_They_Are_Impact__c.field-meta.xml
<CustomField>
    <fullName>Who_They_Are_Impact__c</fullName>
    <label>Who They Are Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>