force-app/main/default/objects/Propensity__c/recordTypes/HG_Insights.recordType-meta.xml
<RecordType>
    <fullName>HG_Insights</fullName>
    <active>true</active>
    <description>Record Type for HG Insight Data</description>
    <label>HG Insights</label>
</RecordType>