force-app/main/default/objects/Propensity__c/recordTypes/Standard.recordType-meta.xml
<RecordType>
    <fullName>Standard</fullName>
    <active>true</active>
    <description>Standard record, historically used for HG Capital Propensity</description>
    <label>Standard</label>
</RecordType>