force-app/main/default/objects/Propensity__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Product_Group__c</columns>
    <columns>Product_Name__c</columns>
    <columns>Status__c</columns>
    <columns>Creation_Score_Percentage__c</columns>
    <columns>Conversion_Score_Percentage__c</columns>
    <columns>Propensity_Score_percentage__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>